--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@ tagline  : Pierre Baron, Ingénieur web & mobile.
 keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 
-<div class="row">
-    <div class="col-xs-12">
-        <section class="section">
-            <h2 class="section-title">A propos de moi</h2>
+<section class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <h2 class="section-title">A propos de moi</h2>
 
-            <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant que développeur web pour
-                <a href="http://www.alyacom.fr/">AlyaCom</a>.
-            </p>
+                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant que développeur web pour
+                    <a href="http://www.alyacom.fr/">AlyaCom</a>.
+                </p>
 
-            <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a
-                    href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.
-            </p>
-        </section>
-        <section class="section text-center">
+                <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a
+                        href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="section text-center" style="background : #f0f0f0;">
+    <div class="container">
+        <div class="row">
             <h2 class="section-title">Compétences</h2>
 
             <div class="row">
@@ -59,15 +65,19 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
                     </p>
                 </div>
             </div>
-        </section>
-        <section class="section">
+        </div>
+    </div>
+</section>
+<section class="section">
+    <div class="container">
+        <div class="row">
             <h2 class="section-title">Projets</h2>
 
             {% for work in site.works %}
             <div class="row work">
                 <div class="col-sm-8">
                     <div class="work-heading">
-                        <h4 class="work-title">{{work.tagline}}</h4>
+                        <h4 class="work-title title-underline title-inverse">{{work.tagline}}</h4>
                     </div>
                     <div class="work-body">
                         {{ work.output }}
@@ -103,7 +113,6 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
             </div>
 
             {% endfor %}
-        </section>
+        </div>
     </div>
-</div>
-<! --/service -->
+</section>
