--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,7 @@
 layout   : contact
 title    : Ingénieur web & mobile
 tagline  : Contact
+menu     : CONTACT
 keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 <div class="row">
@@ -9,34 +10,38 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
         <h4>Restons en contact !</h4>
 
         <div class="hline"></div>
-        <form id="form1" name="form1" class="wufoo" autocomplete="off" enctype="multipart/form-data" method="post" action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
+        <form id="form1" name="form1" class="wufoo" autocomplete="off" enctype="multipart/form-data" method="post"
+              action="https://prbaron.wufoo.com/forms/z1eyes6h0bn28ys/#public">
             <div class="form-group">
                 <label for="" class="control-label">Nom</label>
-                <input id="Field18" name="Field18" type="text" class="form-control" value="" maxlength="255" tabindex="1" required />
+                <input id="Field18" name="Field18" type="text" class="form-control" value="" maxlength="255"
+                       tabindex="1" required/>
             </div>
             <!-- .form-group -->
 
             <div class="form-group">
                 <label for="" class="control-label">Email</label>
-                <input id="Field17" name="Field17" type="email" spellcheck="false" class="form-control" value="" maxlength="255" tabindex="2" required />
+                <input id="Field17" name="Field17" type="email" spellcheck="false" class="form-control" value=""
+                       maxlength="255" tabindex="2" required/>
             </div>
             <!-- .form-group -->
 
             <div class="form-group">
                 <label for="" class="control-label">Message</label>
-                <textarea id="Field20" name="Field20" class="form-control" spellcheck="true" tabindex="3" required></textarea>
+                <textarea id="Field20" name="Field20" class="form-control" spellcheck="true" tabindex="3"
+                          required></textarea>
             </div>
             <!-- .form-group -->
 
             <div class="form-group">
-                <input id="saveForm" name="saveForm" class="submit btn btn-primary" type="submit" value="Envoyer" />
+                <input id="saveForm" name="saveForm" class="submit btn btn-primary" type="submit" value="Envoyer"/>
             </div>
             <!-- .form-group -->
 
             <div class="hidden">
                 <label for="comment">Do Not Fill This Out</label>
                 <textarea name="comment" id="comment" rows="1" cols="1"></textarea>
-                <input type="hidden" id="idstamp" name="idstamp" value="r0cN0lyg1ffgxD/MsEiFeFk7ckfxkBWXW4XZfjRhkIA=" />
+                <input type="hidden" id="idstamp" name="idstamp" value="r0cN0lyg1ffgxD/MsEiFeFk7ckfxkBWXW4XZfjRhkIA="/>
             </div>
         </form>
     </div>
