--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 layout   : default
 title    : Ingénieur web & mobile
 tagline  : Pierre Baron, Ingénieur web & mobile.
-keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
+menu     : HOME
+keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 
 <section class="section">
@@ -107,7 +108,7 @@ keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, Cak
                     <p><a href="{{work.demo}}" class="btn btn-primary">Voir les exemples</a></p>
                     {% endif %}
                     {% if work.github %}
-                    <p><a href="{{work.github}}" class="btn btn-default">Forker le projet</a></p>
+                    <p><a href="{{work.github}}" class="btn btn-ghost btn-default">Forker le projet</a></p>
                     {% endif %}
                 </div>
             </div>
