add resume + update style for footer + update type for menu

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,7 +2,7 @@
 layout   : contact
 title    : Ingénieur web & mobile
 tagline  : Contact
-menu     : CONTACT
+menu     : Contact
 keywords : Pierre Baron, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 <div class="row">
