--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout   : default
 title    : Ingénieur web & mobile
 tagline  : Pierre Baron, Ingénieur web & mobile.
-menu     : HOME
+menu     : Home
 keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 
@@ -14,12 +14,15 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
             <h2 class="section-title">A propos de moi</h2>
 
             <div class="col-xs-12">
-                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. Je travaille actuellement en tant que développeur web pour
-                    <a href="http://www.alyacom.fr/">AlyaCom</a>.
+                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. <strong>Je suis actuellement en recherche active d'emploi pour un poste de développeur web backend/frontend ou de développeur mobile junior.</strong>
                 </p>
 
-                <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a
-                        href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.
+                <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.
+                </p>
+
+                 <p class="text-center resume">
+                	<a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary">Télécharger mon CV</a>
+                	<a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-ghost">Download my resume</a>
                 </p>
             </div>
         </div>
