--- a/index.html
+++ b/index.html
@@ -8,26 +8,37 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
 
 <img src="/img/avatar.jpg" alt="" class="img-thumbnail img-circle img-avatar"/>
 
-<section class="section">
+<section class="section section-resume">
     <div class="container">
         <div class="row">
             <h2 class="section-title">A propos de moi</h2>
 
             <div class="col-xs-12">
-                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et services à l'habitat. <strong>Je suis actuellement en recherche active d'emploi pour un poste de développeur web backend/frontend ou de développeur mobile junior.</strong>
+                <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et
+                    services à l'habitat. <strong>Je suis actuellement en recherche active d'emploi pour un poste de
+                        développeur web backend/frontend ou de développeur mobile junior.</strong>
                 </p>
 
-                <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la sécurité.
+                <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de
+                    m'orienter vers une école d'ingénieur spécialisée en informatique, l'<a
+                            href="https://esir.univ-rennes1.fr/">ESIR</a>. J'ai choisi l'option domotique et services à
+                    l'habitat car elle me permettrait de travailler sur divers systèmes et met en oeuvre un panel de
+                    compétences plutôt large, allant de la programmation objet, l'automatisme, les réseaux ou la
+                    sécurité.
                 </p>
 
-                 <p class="text-center resume">
-                	<a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary">Télécharger mon CV</a>
-                	<a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-ghost">Download my resume</a>
+                <p class="text-center resume">
+                    <a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary">Télécharger mon CV</a>
+                    <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-ghost">Download my resume</a>
                 </p>
             </div>
         </div>
     </div>
 </section>
+<svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+     viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z"></path>
+</svg>
 <section class="section section-skills text-center">
     <div class="container">
         <div class="row">
@@ -37,7 +48,8 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 <i class="fa fa-gears skill-icon"></i>
                 <h4 class="skill-title">Développement back end</h4>
 
-                <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
+                <p>Une bonne application se doit d'être mûrement réfléchie et de posséder une base solide. Cela lui
+                    permettra de devenir évolutive et de s'adapter aux besoins de vos clients.</p>
 
                 <p class="skill-list">
                     <strong>Outils maîtrisés : </strong>
@@ -48,7 +60,9 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 <i class="fa fa-desktop skill-icon"></i>
                 <h4 class="skill-title">Développement front end</h4>
 
-                <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique. L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de juger et d'apprécier votre application.</p>
+                <p>A mon sens, il est aussi important d'avoir une application fonctionelle que belle et ergonomique.
+                    L'interface et les interactions homme-machine, sont les éléments qui permettront à vos clients de
+                    juger et d'apprécier votre application.</p>
 
                 <p class="skill-list">
                     <strong>Outils maîtrisés : </strong>
@@ -61,7 +75,9 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 <i class="fa fa-mobile skill-icon"></i>
                 <h4 class="skill-title">Développement mobile</h4>
 
-                <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand nombre d'appareils.</p>
+                <p>Les applications mobiles webs ou natives sont une part intégrante du web actuel. Il est ainsi
+                    nécessaire de pouvoir proposer à vos clients une application intuitive et adaptée aux plus grand
+                    nombre d'appareils.</p>
 
                 <p class="skill-list">
                     <strong>Outils maîtrisés : </strong>
@@ -72,7 +88,9 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 <i class="fa fa-dashboard skill-icon"></i>
                 <h4 class="skill-title">Gestion de projet</h4>
 
-                <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches tout au long du projet et de pouvoir le suivre du début à la fin.</p>
+                <p>Pour qu'un projet soit réussi, il doit être le plus ordonné possible. Il est donc important pour un
+                    bon ingénieur de maîtriser les techniques et les outils permettant d'attribuer au mieux les tâches
+                    tout au long du projet et de pouvoir le suivre du début à la fin.</p>
 
                 <p class="skill-list">
                     <strong>Outils maîtrisés : </strong>
@@ -84,6 +102,10 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
     </div>
     </div>
 </section>
+<svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+     viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z"></path>
+</svg>
 <section class="section">
     <div class="container">
         <h2 class="section-title">Projets</h2>
