--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
 
                 <p class="text-center resume">
                     <a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary">Télécharger mon CV</a>
-                    <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-ghost">Download my resume</a>
+                    <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default">Download my resume</a>
                 </p>
             </div>
         </div>
@@ -151,7 +151,7 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 <p><a href="{{work.demo}}" class="btn btn-primary">Voir les exemples</a></p>
                 {% endif %}
                 {% if work.github %}
-                <p><a href="{{work.github}}" class="btn btn-ghost btn-default">Forker le projet</a></p>
+                <p><a href="{{work.github}}" class="btn btn-default">Forker le projet</a></p>
                 {% endif %}
             </div>
         </div>
