--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
 
             <div class="col-xs-12">
                 <p>Bonjour, je m'appelle Pierre Baron et je suis ingénieur informaticien spécialisé en domotique et
-                    services à l'habitat. <strong>Je suis actuellement en recherche active d'emploi pour un poste de
-                        développeur web backend/frontend ou de développeur mobile junior.</strong>
+                    services à l'habitat. Je travaille actuellement pour <a href="https://akkroo.com/">Akkroo</a>.
                 </p>
 
                 <p>Après avoir réalisé un IUT en Génie Electrique et Informatique Industrielle, j'ai décidé de
