Fixed buttons style on mobile

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 </p>
 
                 <p class="text-center resume">
-                    <a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary">Télécharger mon CV</a>
-                    <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default">Download my resume</a>
+                    <a href="/resume/cv_pierre_baron_fr.pdf" class="btn btn-primary btn-block-xs">Télécharger mon CV</a>
+                    <a href="/resume/cv_pierre_baron_en.pdf" class="btn btn-default btn-block-xs">Download my resume</a>
                 </p>
             </div>
         </div>
@@ -147,10 +147,10 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
                 </p>
 
                 {% if work.demo %}
-                <p><a href="{{work.demo}}" class="btn btn-primary">Voir les exemples</a></p>
+                <p><a href="{{work.demo}}" class="btn btn-primary btn-block-xs">Voir les exemples</a></p>
                 {% endif %}
                 {% if work.github %}
-                <p><a href="{{work.github}}" class="btn btn-default">Forker le projet</a></p>
+                <p><a href="{{work.github}}" class="btn btn-default btn-block-xs">Forker le projet</a></p>
                 {% endif %}
             </div>
         </div>
