--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
         </div>
     </div>
 </section>
-<svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
      viewBox="0 0 100 102" preserveAspectRatio="none">
     <path d="M0 0 L50 100 L100 0 Z"></path>
 </svg>
@@ -93,7 +93,7 @@ keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Ja
     </div>
     </div>
 </section>
-<svg id="bigTriangleColor" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
+<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="60"
      viewBox="0 0 100 102" preserveAspectRatio="none">
     <path d="M0 0 L50 100 L100 0 Z"></path>
 </svg>
