--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ menu     : Home
 keywords : Pierre Baron, prbaron, prbaron22, Web developer, Mobile Developer, Java, PHP, jQuery, CakePHP, jQuery
 ---
 
-<img src="/img/avatar.jpg" alt="" class="img-thumbnail img-circle img-avatar"/>
+<img src="/img/avatar.png" alt="" class="img-avatar"/>
 
 <section class="section section-resume">
     <div class="container">
